--- a/pages/17768.html
+++ b/pages/17768.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -381,17 +381,17 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#details'>Details</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#details'>Details</a></li><li><a href='#properties'>Properties</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>The <em>Helmholtz operator</em> (going back to <a href='#Helmholtz87'>Helmholtz 87</a>, <a href='#Sonin'>Sonin</a>, with modern version due to <a href='#Vinogradov78'>Vinogradov 78</a>, <a href='#Tulczyjew80'>Tulczyjew 80</a>) is a map from <a class='existingWikiWord' href='/nlab/show/differential+equation'>partial differential equations</a> (on <a class='existingWikiWord' href='/nlab/show/section'>sections</a> of some <a class='existingWikiWord' href='/nlab/show/bundle'>bundle</a>) to <a class='existingWikiWord' href='/nlab/show/differential+operator'>differential operators</a> (on sections of that bundle) with the property that locally its <a class='existingWikiWord' href='/nlab/show/kernel'>kernel</a> consists precisely of those <a class='existingWikiWord' href='/nlab/show/differential+equation'>PDEs</a> which are <em>variational</em> in that there is a <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>local Lagrangian density</a> such that the PDE is the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equation</a> which says that the variational of this Lagrangian (equivalently: of the <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> that it induces) vanishes.</p>
+<p>The <em>Helmholtz operator</em> (going back to <a href='#Helmholtz87'>Helmholtz 87</a>, <a href='#Sonin'>Sonin</a>, with modern version due to <a href='#Vinogradov78'>Vinogradov 78</a>, <a href='#Tulczyjew80'>Tulczyjew 80</a>) is a map from <a class='existingWikiWord' href='/nlab/show/differential+equation'>partial differential equations</a> (on <a class='existingWikiWord' href='/nlab/show/section'>sections</a> of some <a class='existingWikiWord' href='/nlab/show/bundle'>bundle</a>) to <a class='existingWikiWord' href='/nlab/show/differential+operator'>differential operators</a> (on sections of that bundle) with the property that locally its <a class='existingWikiWord' href='/nlab/show/kernel'>kernel</a> consists precisely of those <a class='existingWikiWord' href='/nlab/show/differential+equation'>PDEs</a> which are <em>variational</em> in that there is a <a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>local Lagrangian density</a> such that the PDE is the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equation</a> which says that the <a class='existingWikiWord' href='/nlab/show/variational+calculus'>variational derivative</a> of this Lagrangian (equivalently: of the <a class='existingWikiWord' href='/nlab/show/action+functional'>action functional</a> that it induces) vanishes.</p>
 
-<p>In modern terminology this says that together with the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+complex'>Euler-Lagrange operator</a> the Helmholtz operator constitutes a <a class='existingWikiWord' href='/nlab/show/chain+complex'>chain complex</a> of <a class='existingWikiWord' href='/nlab/show/abelian+sheaf'>abelian sheaves</a> (namely of <a class='existingWikiWord' href='/nlab/show/differential+form'>differential forms</a> on a <a class='existingWikiWord' href='/nlab/show/jet+bundle'>jet bundle</a>) which is locally <a class='existingWikiWord' href='/nlab/show/exact+sequence'>exact</a>. In fact this extends in both directions to a locally <a class='existingWikiWord' href='/nlab/show/exact+sequence'>long exact sequence</a> of forms on the jet bundle, called the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+complex'>Euler-Lagrange complex</a>. See there for more.</p>
+<p>In modern terminology this says that together with the <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+complex'>Euler-Lagrange operator</a> the Helmholtz operator constitutes a <a class='existingWikiWord' href='/nlab/show/chain+complex'>chain complex</a> of <a class='existingWikiWord' href='/nlab/show/abelian+sheaf'>abelian sheaves</a> (namely of <a class='existingWikiWord' href='/nlab/show/differential+form'>differential forms</a> on a <a class='existingWikiWord' href='/nlab/show/jet+bundle'>jet bundle</a>) which is locally <a class='existingWikiWord' href='/nlab/show/exact+sequence'>exact</a>. In fact this extends in both directions to a locally <a class='existingWikiWord' href='/nlab/show/exact+sequence'>long exact sequence</a> of forms on the jet bundle, called the <em><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+complex'>Euler-Lagrange complex</a></em>. See there for more.</p>
 
 <h2 id='details'>Details</h2>
 
-<p>A quick way to write the Helmholtz operator <math class='maruku-mathml' display='inline' id='mathml_5f6431acaa6f2819895d2f3f41431dd0dfcf63d7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math> is as follows: If <math class='maruku-mathml' display='inline' id='mathml_5f6431acaa6f2819895d2f3f41431dd0dfcf63d7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> denotes a <a class='existingWikiWord' href='/nlab/show/differential+equation'>partial differential equation</a> and <math class='maruku-mathml' display='inline' id='mathml_5f6431acaa6f2819895d2f3f41431dd0dfcf63d7_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>L\mathcal{E}</annotation></semantics></math> its linearization, and <math class='maruku-mathml' display='inline' id='mathml_5f6431acaa6f2819895d2f3f41431dd0dfcf63d7_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>L</mi><msup><mi>ℰ</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>(L\mathcal{E}^\ast</annotation></semantics></math> its <a class='existingWikiWord' href='/nlab/show/formal+adjoint+differential+operator'>formal adjoint differential operator</a>, as a <a class='existingWikiWord' href='/nlab/show/differential+operator'>differential operator</a> then</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5f6431acaa6f2819895d2f3f41431dd0dfcf63d7_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi><mo stretchy='false'>[</mo><mi>ℰ</mi><mo stretchy='false'>]</mo><mo>=</mo><mi>L</mi><mi>ℰ</mi><mo>−</mo><mo stretchy='false'>(</mo><mi>L</mi><mi>ℰ</mi><msup><mo stretchy='false'>)</mo> <mo>*</mo></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>A quick way to write the Helmholtz operator <math class='maruku-mathml' display='inline' id='mathml_e6cdc366ec680d650a2c214da72af875f49860c0_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi></mrow><annotation encoding='application/x-tex'>H</annotation></semantics></math> is as follows: If <math class='maruku-mathml' display='inline' id='mathml_e6cdc366ec680d650a2c214da72af875f49860c0_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> denotes a <a class='existingWikiWord' href='/nlab/show/differential+equation'>partial differential equation</a> and <math class='maruku-mathml' display='inline' id='mathml_e6cdc366ec680d650a2c214da72af875f49860c0_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>L\mathcal{E}</annotation></semantics></math> its linearization (<a class='existingWikiWord' href='/nlab/show/evolutionary+derivative'>evolutionary derivative</a>), and <math class='maruku-mathml' display='inline' id='mathml_e6cdc366ec680d650a2c214da72af875f49860c0_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>L</mi><msup><mi>ℰ</mi> <mo>*</mo></msup></mrow><annotation encoding='application/x-tex'>(L\mathcal{E}^\ast</annotation></semantics></math> its <a class='existingWikiWord' href='/nlab/show/formal+adjoint+differential+operator'>formal adjoint differential operator</a>, as a <a class='existingWikiWord' href='/nlab/show/differential+operator'>differential operator</a> then</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_e6cdc366ec680d650a2c214da72af875f49860c0_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>H</mi><mo stretchy='false'>[</mo><mi>ℰ</mi><mo stretchy='false'>]</mo><mo>=</mo><mi>L</mi><mi>ℰ</mi><mo>−</mo><mo stretchy='false'>(</mo><mi>L</mi><mi>ℰ</mi><msup><mo stretchy='false'>)</mo> <mo>*</mo></msup><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   H[\mathcal{E}]
     =
   L\mathcal{E}
@@ -400,7 +400,11 @@ margin-left: 0em;
   \,.
 
 </annotation></semantics></math></div>
-<p>This means that the PDE <math class='maruku-mathml' display='inline' id='mathml_5f6431acaa6f2819895d2f3f41431dd0dfcf63d7_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is locally variational precisely if its linearization is formally self-adjoint.</p>
+<p>This means that the PDE <math class='maruku-mathml' display='inline' id='mathml_e6cdc366ec680d650a2c214da72af875f49860c0_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi></mrow><annotation encoding='application/x-tex'>\mathcal{E}</annotation></semantics></math> is locally variational precisely if its linearization is formally self-adjoint.</p>
+
+<h2 id='properties'>Properties</h2>
+
+<p>For proof that every <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+equation'>Euler-Lagrange equation</a> is in the kernel of the Helmholtz operator see <em><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+A+first+idea+of+quantum+field+theory'>geometry of physics -- A first idea of quantum field theory</a></em> <a href='geometry+of+physics+--+A+first+idea+of+quantum+field+theory#EvolutionaryDerivativeOfEulerLagrangeFormIsFormallySelfAdjoint'>this prop.</a>.</p>
 
 <h2 id='references'>References</h2>
 
@@ -442,14 +446,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November  7, 2016 10:10:32 
+  Revised on December 28, 2017 18:09:27 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.183)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Helmholtz+operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Helmholtz+operator/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Helmholtz+operator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Helmholtz+operator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Helmholtz+operator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Helmholtz+operator/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Helmholtz+operator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Helmholtz+operator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
