--- a/pages/15354.html
+++ b/pages/15354.html
@@ -324,7 +324,7 @@ margin-left: 0em;
 
 <p><a href='https://publications.ias.edu/node/2605'>a message to Sarnak on general issues</a></p>
 
-<p><a href='https://www.maths.nottingham.ac.uk/personal/ibf/files/RL-oxford.pdf'>review and discussion of further issuees (pdf)</a></p>
+<p><a href='https://www.maths.nottingham.ac.uk/personal/ibf/files/RL-oxford.pdf'>review and discussion of further issues (pdf)</a></p>
 
 <p><a href='http://video.ias.edu/files/ams/2014/LanglandsEdit.mp4'>lecture video 1</a>, <a href='http://video.ias.edu/files/ams/2014/LanglandsP1.mp4'>video 2</a>, <a href='http://video.ias.edu/files/ams/2014/LanglandsP2.mp4'>video 3</a>.<sup id='fnref:1'><a href='#fn:1' rel='footnote'>1</a></sup></p>
 
@@ -344,14 +344,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 16, 2015 19:32:28 
-  by <a class="existingWikiWord" href="/nlab/show/Rod+McGuire">Rod Mc Guire</a>
-  (71.112.32.88)
+  Revised on December 29, 2017 15:09:53 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (192.0.163.56)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Problems+in+the+theory+of+automorphic+forms+--+45+years+later" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Problems+in+the+theory+of+automorphic+forms+--+45+years+later/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Problems+in+the+theory+of+automorphic+forms+--+45+years+later" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Problems+in+the+theory+of+automorphic+forms+--+45+years+later" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Problems+in+the+theory+of+automorphic+forms+--+45+years+later" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Problems+in+the+theory+of+automorphic+forms+--+45+years+later/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Problems+in+the+theory+of+automorphic+forms+--+45+years+later" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Problems+in+the+theory+of+automorphic+forms+--+45+years+later" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
