--- a/pages/2927.html
+++ b/pages/2927.html
@@ -409,7 +409,7 @@ margin-left: 0em;
 </div>
 
 </div>
-<p>A <strong>cartesian object</strong> in a <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> with <a class='existingWikiWord' href='/nlab/show/2-limit'>finite limits</a> is an object <math class='maruku-mathml' display='inline' id='mathml_d18ea257449933a2d8e290b3a1a6d88565951f80_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> such that the <a class='existingWikiWord' href='/nlab/show/diagonal+morphism'>diagonal morphism</a> <math class='maruku-mathml' display='inline' id='mathml_d18ea257449933a2d8e290b3a1a6d88565951f80_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>→</mo><mi>A</mi><mo>×</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>A\to A\times A</annotation></semantics></math> and the unique map <math class='maruku-mathml' display='inline' id='mathml_d18ea257449933a2d8e290b3a1a6d88565951f80_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>→</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>A\to 1</annotation></semantics></math> have <a class='existingWikiWord' href='/nlab/show/right+adjoint'>right adjoints</a>. Any cartesian object is automatically a <a class='existingWikiWord' href='/nlab/show/pseudomonoid'>pseudomonoid</a> in a canonical way.</p>
+<p>A <strong>cartesian object</strong> in a <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> with <a class='existingWikiWord' href='/nlab/show/2-limit'>finite products</a> is an object <math class='maruku-mathml' display='inline' id='mathml_16bbf99f8abd1dc9359d8405b2a3793faf5afa1e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi></mrow><annotation encoding='application/x-tex'>A</annotation></semantics></math> such that the <a class='existingWikiWord' href='/nlab/show/diagonal+morphism'>diagonal morphism</a> <math class='maruku-mathml' display='inline' id='mathml_16bbf99f8abd1dc9359d8405b2a3793faf5afa1e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>→</mo><mi>A</mi><mo>×</mo><mi>A</mi></mrow><annotation encoding='application/x-tex'>A\to A\times A</annotation></semantics></math> and the unique map <math class='maruku-mathml' display='inline' id='mathml_16bbf99f8abd1dc9359d8405b2a3793faf5afa1e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>A</mi><mo>→</mo><mn>1</mn></mrow><annotation encoding='application/x-tex'>A\to 1</annotation></semantics></math> have <a class='existingWikiWord' href='/nlab/show/right+adjoint'>right adjoints</a>. Any cartesian object is automatically a <a class='existingWikiWord' href='/nlab/show/pseudomonoid'>pseudomonoid</a> in a canonical way.</p>
 
 <p>For example, a cartesian object in <a class='existingWikiWord' href='/nlab/show/Cat'>Cat</a> is precisely a category with finite <a class='existingWikiWord' href='/nlab/show/cartesian+product'>products</a>, which is of course a <a class='existingWikiWord' href='/nlab/show/monoidal+category'>monoidal category</a> in a canonical way.</p>
 
@@ -418,14 +418,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May 21, 2010 19:15:48 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (128.192.37.11)
+  Revised on December 29, 2017 21:39:17 
+  by <a class="existingWikiWord" href="/nlab/show/Jonas+Frey">Jonas Frey</a>
+  (128.237.217.194)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cartesian+object" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cartesian+object/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/cartesian+object" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cartesian+object" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cartesian+object" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cartesian+object/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/cartesian+object" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cartesian+object" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
