--- a/pages/626.html
+++ b/pages/626.html
@@ -998,7 +998,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>there is also a string diagram calculus for <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategories</a>, which extends that for monoidal categories regarded as one-object bicategories. Thus, the strings now represent 1-cells and the nodes 2-cells, leaving the two-dimensional planar regions cut out by the strings to represent the 0-cells. This makes it manifest that in general, string diagram notation is <em>Poincaré dual</em> to the <a class='existingWikiWord' href='/nlab/show/globe'>globular</a> notation: where one uses <math class='maruku-mathml' display='inline' id='mathml_f7b3460a57aa6d3e6735c118a8f8f38b208c025b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math>-dimensional symbols, the other uses <math class='maruku-mathml' display='inline' id='mathml_f7b3460a57aa6d3e6735c118a8f8f38b208c025b_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>2</mn><mo>−</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(2-d)</annotation></semantics></math>-dimensional symbols.</p>
+<p>there is also a string diagram calculus for <a class='existingWikiWord' href='/nlab/show/bicategory'>bicategories</a>, which extends that for monoidal categories regarded as one-object bicategories. Thus, the strings now represent 1-cells and the nodes 2-cells, leaving the two-dimensional planar regions cut out by the strings to represent the 0-cells. This makes it manifest that in general, string diagram notation is <em>Poincaré dual</em> to the <a class='existingWikiWord' href='/nlab/show/globe'>globular</a> notation: where one uses <math class='maruku-mathml' display='inline' id='mathml_c16d0591676f9c3562a9080917dc10176d3eda06_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi></mrow><annotation encoding='application/x-tex'>d</annotation></semantics></math>-dimensional symbols, the other uses <math class='maruku-mathml' display='inline' id='mathml_c16d0591676f9c3562a9080917dc10176d3eda06_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>2</mn><mo>−</mo><mi>d</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(2-d)</annotation></semantics></math>-dimensional symbols.</p>
 </li>
 
 <li>
@@ -1183,7 +1183,7 @@ margin-left: 0em;
 <p>For <a class='existingWikiWord' href='/nlab/show/1-category'>1-categories</a> in</p>
 
 <ul>
-<li><span class='newWikiWord'>Dan Marsden<a href='/nlab/new/Dan+Marsden'>?</a></span>: Category Theory Using String Diagrams. arXiv:1401.7220v2 [math.CT]</li>
+<li><a class='existingWikiWord' href='/nlab/show/Dan+Marsden'>Dan Marsden</a>, <em>Category Theory Using String Diagrams</em>, (<a href='https://arxiv.org/abs/1401.7220'>arXiv:1401.7220</a>).</li>
 </ul>
 
 <p>(therein: many explicit calculations, colored illustrations, avoiding the common practice of indicating 0-cells by non-filled circles)</p>
@@ -1203,7 +1203,7 @@ margin-left: 0em;
 <p>For <a class='existingWikiWord' href='/nlab/show/closed+monoidal+category'>closed monoidal categories</a> in</p>
 
 <ul id='BaezQG06'>
-<li><a class='existingWikiWord' href='/nlab/show/John+Baez'>John Baez</a>, Quantum Gravity Seminar - Fall 2006. <a href='http://math.ucr.edu/home/baez/qg-fall2006/index.html#computation'>http://math.ucr.edu/home/baez/qg-fall2006/index.html#computation</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/John+Baez'>John Baez</a>, Quantum Gravity Seminar - Fall 2006. &lt;http://math.ucr.edu/home/baez/qg-fall2006/index.html#computation&gt;</li>
 </ul>
 
 <ul id='Rosetta'>
@@ -1217,7 +1217,7 @@ margin-left: 0em;
 <p>For <a class='existingWikiWord' href='/nlab/show/linearly+distributive+category'>linearly distributive categories</a> in</p>
 
 <ul id='BCST'>
-<li><a class='existingWikiWord' href='/nlab/show/Richard+Blute'>Richard Blute</a> and <a class='existingWikiWord' href='/nlab/show/Robin+Cockett'>Robin Cockett</a> and <span class='newWikiWord'>R.A.G. Seely<a href='/nlab/new/R.A.G.+Seely'>?</a></span> and <a class='existingWikiWord' href='/nlab/show/Todd+Trimble'>Todd Trimble</a>, <em>Natural deduction and coherence for weakly distributive categories.</em></li>
+<li><a class='existingWikiWord' href='/nlab/show/Richard+Blute'>Richard Blute</a> and <a class='existingWikiWord' href='/nlab/show/Robin+Cockett'>Robin Cockett</a> and <a class='existingWikiWord' href='/nlab/show/Robert+Seely'>R.A.G. Seely</a> and <a class='existingWikiWord' href='/nlab/show/Todd+Trimble'>Todd Trimble</a>, <em>Natural deduction and coherence for weakly distributive categories.</em></li>
 </ul>
 
 <p>For <a class='existingWikiWord' href='/nlab/show/indexed+monoidal+category'>indexed monoidal categories</a> in</p>
@@ -1267,14 +1267,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 13, 2017 12:43:18 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (192.195.154.151)
+  Revised on January  2, 2018 06:40:21 
+  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
+  (217.39.117.135)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/string+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+diagram/38" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(38 revisions)</span> | <a href="/nlab/show/diff/string+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/string+diagram" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/string+diagram/39" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(39 revisions)</span> | <a href="/nlab/show/diff/string+diagram" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/string+diagram" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
