--- a/pages/10332.html
+++ b/pages/10332.html
@@ -320,10 +320,10 @@ margin-left: 0em;
 
 <h2 id='Quotes'>Quotes:</h2>
 
-<p>On <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> as the language of <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> (the: “<a class='existingWikiWord' href='/nlab/show/natural+philosophy'>natural philosophy</a>”):</p>
+<p>On <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> as the language of <a class='existingWikiWord' href='/nlab/show/physics'>physics</a>:</p>
 
 <blockquote>
-<p id='TheBookOfnature'> <a class='existingWikiWord' href='/nlab/show/natural+philosophy'>Philosophy</a> <math class='maruku-mathml' display='inline' id='mathml_3795e907b2dc152e749b2053d0677fdaae7c8f81_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>i.e. <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> <math class='maruku-mathml' display='inline' id='mathml_3795e907b2dc152e749b2053d0677fdaae7c8f81_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> is written in this grand book — I mean the universe — which stands continually open to our gaze, but it cannot be understood unless one first learns to comprehend the language and interpret the characters in which it is written. It is written in the language of <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a>, and its characters are triangles, circles, and other geometrical figures, without which it is humanly impossible to understand a single word of it; without these, one is wandering around in a dark labyrinth. (<a href='http://en.wikipedia.org/wiki/The_Assayer'>Galilei, Il Saggiatore, 1623</a>).</p>
+<p id='TheBookOfnature'> <a class='existingWikiWord' href='/nlab/show/natural+philosophy'>Philosophy</a> <math class='maruku-mathml' display='inline' id='mathml_ddff5eb4bcf279cce532ef5e7855acaf88d8624f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>i.e. <a class='existingWikiWord' href='/nlab/show/natural+philosophy'>natural philosophy</a>, i.e. <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> <math class='maruku-mathml' display='inline' id='mathml_ddff5eb4bcf279cce532ef5e7855acaf88d8624f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> is written in this grand book — I mean the universe — which stands continually open to our gaze, but it cannot be understood unless one first learns to comprehend the language and interpret the characters in which it is written. It is written in the language of <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a>, and its characters are triangles, circles, and other geometrical figures, without which it is humanly impossible to understand a single word of it; without these, one is wandering around in a dark labyrinth. (<a href='http://en.wikipedia.org/wiki/The_Assayer'>Galilei, Il Saggiatore, 1623</a>).</p>
 </blockquote>
 
 <p>Compare also</p>
@@ -358,14 +358,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 10, 2015 16:58:15 
+  Revised on January  2, 2018 12:53:24 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (147.231.89.106)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Galileo+Galilei" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Galileo+Galilei/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Galileo+Galilei" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Galileo+Galilei" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Galileo+Galilei" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Galileo+Galilei/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/Galileo+Galilei" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Galileo+Galilei" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
