--- a/pages/9161.html
+++ b/pages/9161.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -906,7 +906,7 @@ margin-left: 0em;
 
 <h2 id='properties'>Properties</h2>
 
-<p>The <a class='existingWikiWord' href='/nlab/show/particle'>quanta</a> of light are <a class='existingWikiWord' href='/nlab/show/photon'>photons</a>. The <span class='newWikiWord'>speed of light<a href='/nlab/new/speed+of+light'>?</a></span> in <a class='existingWikiWord' href='/nlab/show/vacuum'>vacuum</a> plays a special role in the laws of physics, see at <em><a class='existingWikiWord' href='/nlab/show/special+relativity'>special relativity</a></em>.</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/particle'>quanta</a> of light are <a class='existingWikiWord' href='/nlab/show/photon'>photons</a>. The <a class='existingWikiWord' href='/nlab/show/speed+of+light'>speed of light</a> in <a class='existingWikiWord' href='/nlab/show/vacuum'>vacuum</a> plays a special role in the laws of physics, see at <em><a class='existingWikiWord' href='/nlab/show/special+relativity'>special relativity</a></em>.</p>
 
 <h2 id='terminology'>Terminology</h2>
 
@@ -956,17 +956,21 @@ margin-left: 0em;
  
  
 </p>
+
+<p>
+ 
+</p>
 </div>
 
 <div class="revisedby">
-  Revised on November 11, 2016 13:16:40 
+  Revised on January  2, 2018 13:19:37 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (78.45.5.227)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/light" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/light/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/light" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/light" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/light" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/light/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/light" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/light" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
