--- a/pages/18644.html
+++ b/pages/18644.html
@@ -319,16 +319,74 @@ margin-left: 0em;
 
 <h2 id='concepts'>Concepts</h2>
 
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a>, <a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+observable'>quantum observable</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a>, <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a>, <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+quantization'>geometric quantization</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/deformation+quantization'>algebraic deformation quantization</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/observable'>observables</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/local+observable'>local observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/polynomial+observable'>polynomial observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/microcausal+observable'>microcausal observables</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/operator+algebra'>operator algebra</a>, <a class='existingWikiWord' href='/nlab/show/C-star-algebra'>C*-algebra</a>, <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra'>von Neumann algebra</a></p>
+</li>
 </ul>
 </li>
 
@@ -359,19 +417,23 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/state+on+an+operator+algebra'>quantum states</a>,</p>
+<p><a class='existingWikiWord' href='/nlab/show/state+on+a+star-algebra'>state on a star-algebra</a>, <a class='existingWikiWord' href='/nlab/show/quantum+probability'>quantum probability</a></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/pure+state'>pure state</a>, <a class='existingWikiWord' href='/nlab/show/pure+state'>mixed state</a>, <a class='existingWikiWord' href='/nlab/show/density+matrix'>density matrix</a></p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/space+of+states+%28in+geometric+quantization%29'>space of quantum states</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/vacuum+state'>vacuum state</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/quasi-free+quantum+state'>quasi-free state</a>,</p>
 </li>
 
 <li>
@@ -380,20 +442,18 @@ margin-left: 0em;
 </ul>
 </li>
 </ul>
+</li>
 
-<p><strong><a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/picture+of+mechanics'>picture of quantum mechanics</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/free+field'>free field</a> <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls-Poisson bracket</a>, <a class='existingWikiWord' href='/nlab/show/causal+propagator'>causal propagator</a></p>
-</li>
-
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/star-algebra'>star algebra</a>, <a class='existingWikiWord' href='/nlab/show/Moyal+deformation+quantization'>Moyal deformation quantization</a></p>
 </li>
 
 <li>
@@ -401,13 +461,25 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/microcausal+functional'>microcausal functionals</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/canonical+commutation+relation'>canonical commutation relations</a>, <a class='existingWikiWord' href='/nlab/show/Weyl+relation'>Weyl relations</a></p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Wick+algebra'>normal ordered product</a></p>
 </li>
 </ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fock+space'>Fock space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/interaction'>interacting</a> field <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/causal+perturbation+theory'>causal perturbation theory</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+algebraic+quantum+field+theory'>perturbative AQFT</a></p>
 </li>
 
 <li>
@@ -429,7 +501,29 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/renormalization'>renormalization</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/extension+of+distributions'>extension of distributions</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/St%C3%BCckelberg-Petermann+renormalization+group'>Stückelberg-Petermann renormalization group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Gell-Mann-Low+renormalization+cocycle'>Gell-Mann-Low renormalization cocycle</a></p>
+</li>
+</ul>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/interacting+field+algebra'>interacting field algebra</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Bogoliubov%27s+formula'>Bogoliubov&#39;s formula</a></li>
+</ul>
 </li>
 </ul>
 
@@ -439,7 +533,29 @@ margin-left: 0em;
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/order-theoretic+structure+in+quantum+mechanics'>order-theoretic structure in quantum mechanics</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Alfsen-Shultz+theorem'>Alfsen-Shultz theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Harding-D%C3%B6ring-Hamhalter+theorem'>Harding-Döring-Hamhalter theorem</a></p>
+</li>
+</ul>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/Kochen-Specker+theorem'>Kochen-Specker theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bell%27s+theorem'>Bell&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Fell%27s+theorem'>Fell&#39;s theorem</a></p>
 </li>
 
 <li>
@@ -449,13 +565,29 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Wigner+theorem'>Wigner theorem</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Bub-Clifton+theorem'>Bub-Clifton theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Kadison-Singer+problem'>Kadison-Singer problem</a></p>
+</li>
 </ul>
 
 <h3 id='operator_algebra'>Operator algebra</h3>
 
 <ul>
 <li>
+<p><a class='existingWikiWord' href='/nlab/show/Wick%27s+lemma'>Wick&#39;s theorem</a></p>
+</li>
+
+<li>
 <p><a class='existingWikiWord' href='/nlab/show/Gelfand-Naimark-Segal+construction'>GNS construction</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/cyclic+vector'>cyclic vector</a>, <a class='existingWikiWord' href='/nlab/show/separating+vector'>separating vector</a></li>
+</ul>
 </li>
 
 <li>
@@ -497,18 +629,16 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/DHR+superselection+theory'>DHR superselection theory</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a> (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotation</a>)</p>
+</li>
 </ul>
 
 <h3 id='perturbative_qft'>Perturbative QFT</h3>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/main+theorem+of+perturbative+renormalization'>main theorem of perturbative renormalization</a></li>
-</ul>
-
-<h3 id='euclidean_qft'>Euclidean QFT</h3>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/Osterwalder-Schrader+theorem'>Osterwalder-Schrader theorem</a> (<a class='existingWikiWord' href='/nlab/show/Wick+rotation'>Wick rotation</a>)</li>
 </ul>
 </div>
 </div>
@@ -528,11 +658,9 @@ margin-left: 0em;
 
 <h2 id='properties'>Properties</h2>
 
-<blockquote>
-<p>The <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>Lee-Nauenberg theorem</a> is a fundamental quantum mechanical result which provides the standard theoretical response to the problem of collinear and infrared divergences. Its argument, that the divergences due to massless charged particles can be removed by summing over degenerate states, has been successfully applied to systems with final state degeneracies such as LEP processes. If there are massless particles in both the initial and final states, as will be the case at the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, the theorem requires the incorporation of disconnected <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>diagrams</a> which produce connected interference effects at the level of the cross-section. However, this aspect of the theory has never been fully tested in the calculation of a cross-section. We show through explicit examples that in such cases the theorem introduces a divergent series of diagrams and hence fails to cancel the infrared divergences. It is also demonstrated that the widespread practice of treating soft infrared divergences by the <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>Bloch-Nordsieck method</a> and handling collinear divergences by the Lee-Nauenberg method is not consistent in such cases.</p>
+<p>&gt; The <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>Lee-Nauenberg theorem</a> is a fundamental quantum mechanical result which provides the standard theoretical response to the problem of collinear and infrared divergences. Its argument, that the divergences due to massless charged particles can be removed by summing over degenerate states, has been successfully applied to systems with final state degeneracies such as LEP processes. If there are massless particles in both the initial and final states, as will be the case at the <a class='existingWikiWord' href='/nlab/show/LHC'>LHC</a>, the theorem requires the incorporation of disconnected <a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>diagrams</a> which produce connected interference effects at the level of the cross-section. However, this aspect of the theory has never been fully tested in the calculation of a cross-section. We show through explicit examples that in such cases the theorem introduces a divergent series of diagrams and hence fails to cancel the infrared divergences. It is also demonstrated that the widespread practice of treating soft infrared divergences by the <a class='existingWikiWord' href='/nlab/show/infrared+divergence'>Bloch-Nordsieck method</a> and handling collinear divergences by the Lee-Nauenberg method is not consistent in such cases.</p>
 
-<p>(<a href='#LavelleMcMullan05'>Lavelle-McMullan 05</a>)</p>
-</blockquote>
+<p>&gt; (<a href='#LavelleMcMullan05'>Lavelle-McMullan 05</a>)</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -623,14 +751,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 30, 2017 12:55:02 
+  Revised on January  2, 2018 15:40:32 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.69.162)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/infrared+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/infrared+divergence/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/infrared+divergence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/infrared+divergence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/infrared+divergence" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/infrared+divergence/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/infrared+divergence" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/infrared+divergence" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
