--- a/pages/11629.html
+++ b/pages/11629.html
@@ -315,21 +315,27 @@ margin-left: 0em;
 <h2 id='related_entries'>related entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/AGT+correspondence'>AGT correspondence</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/AGT+correspondence'>AGT correspondence</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/FQFT'>FQFT</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on May 14, 2014 07:02:36 
+  Revised on January  2, 2018 16:01:25 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (82.136.246.44)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Yuji+Tachikawa" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Yuji+Tachikawa" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Yuji+Tachikawa/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Yuji+Tachikawa" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Yuji+Tachikawa" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
