--- a/pages/8410.html
+++ b/pages/8410.html
@@ -952,7 +952,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>Before <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> was found to be ‘the language with which God has written the universe’ (<a class='existingWikiWord' href='/nlab/show/Galileo+Galilei'>Galilei</a>) with <a class='existingWikiWord' href='/nlab/show/Newton%27s+laws+of+motion'>Newton&#39;s laws of motion</a>, the study of the <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a> of <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> was pursued by more informal means, and went by the name <em>natural philosophy</em>, that is the <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a> of <span class='newWikiWord'>nature<a href='/nlab/new/nature'>?</a></span>. (Compare ‘natural history’ for <a class='existingWikiWord' href='/nlab/show/biology'>biology</a>, although that term is still used for observational biology.)</p>
+<p>Before <a class='existingWikiWord' href='/nlab/show/mathematics'>mathematics</a> was found to be ‘the language with which God has written the universe’ (<a class='existingWikiWord' href='/nlab/show/Galileo+Galilei'>Galilei</a>, <a href='Galileo+Galilei#TheBookOfnature'>Il Saggiatore, 1623</a>) (eventually via <a class='existingWikiWord' href='/nlab/show/Newton%27s+laws+of+motion'>Newton&#39;s laws of motion</a>), the study of the <a class='existingWikiWord' href='/nlab/show/phenomenology'>phenomenology</a> of <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> was pursued by more informal means, and went by the name <em>natural philosophy</em>, that is the <a class='existingWikiWord' href='/nlab/show/philosophy'>philosophy</a> of <span class='newWikiWord'>nature<a href='/nlab/new/nature'>?</a></span>. (Compare ‘natural history’ for <a class='existingWikiWord' href='/nlab/show/biology'>biology</a>, although that term is still used for observational biology.)</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -968,14 +968,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January  7, 2015 03:26:00 
+  Revised on January  3, 2018 00:48:43 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (127.0.0.1)
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/natural+philosophy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/natural+philosophy/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/natural+philosophy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/natural+philosophy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/natural+philosophy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/natural+philosophy/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/natural+philosophy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/natural+philosophy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
