--- a/pages/11529.html
+++ b/pages/11529.html
@@ -318,7 +318,7 @@ margin-left: 0em;
 <li><em>An Introduction to Non-Perturbative Foundations of Quantum Field Theory</em>, Oxford University Press, 2013</li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_511a050743806ef2819f66f45b80a10cb713d4a3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_994c6234a8d40d31c31d8da7217a4361dc7e5b33_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -332,20 +332,24 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/AQFT'>AQFT</a>, <a class='existingWikiWord' href='/nlab/show/Wightman+axioms'>Wightman axioms</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/instanton+in+QCD'>instanton in QCD</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on April 16, 2014 02:38:17 
-  by <a class="existingWikiWord" href="/nlab/show/Igor+Khavkine">Igor Khavkine</a>
-  (193.205.210.43)
+  Revised on January  3, 2018 15:40:49 
+  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
+  (94.220.53.179)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Franco+Strocchi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Franco+Strocchi/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Franco+Strocchi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Franco+Strocchi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Franco+Strocchi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Franco+Strocchi/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Franco+Strocchi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Franco+Strocchi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
