--- a/pages/8370.html
+++ b/pages/8370.html
@@ -323,10 +323,10 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_24e52be9c48f99d0b2140aaf8fcbbc02793a376a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_8f87e76791e3c62e95edc3a6c3576627ee7220fc_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -848,14 +848,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 10, 2014 17:57:54 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (141.0.9.60)
+  Revised on January  5, 2018 04:17:37 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/computational+trinitarianism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/computational+trinitarianism/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/computational+trinitarianism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/computational+trinitarianism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/computational+trinitarianism" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/computational+trinitarianism/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/computational+trinitarianism" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/computational+trinitarianism" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
