--- a/pages/2685.html
+++ b/pages/2685.html
@@ -312,7 +312,7 @@ margin-left: 0em;
 <li><a href='http://en.wikipedia.org/wiki/Richard_Feynman'>wikipedia</a></li>
 </ul>
 
-<h1 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_8283853b3aa20c48c03ff476579da684f02f3338_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h1>
+<h1 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_f1bff34a4d6a1f2c04fff8cec9e6ba0193b19379_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h1>
 
 <ul>
 <li>
@@ -326,6 +326,22 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/path+integral'>path integral</a></p>
 </li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Feynman+diagram'>Feynman diagram</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/S-matrix'>Feynman perturbation series</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Feynman+slash+notation'>Feynman slash notation</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
@@ -335,14 +351,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 12, 2017 11:43:00 
+  Revised on January  5, 2018 05:23:42 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.55.151)
+  (178.9.120.196)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Richard+Feynman" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Richard+Feynman/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Richard+Feynman" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Richard+Feynman" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Richard+Feynman" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Richard+Feynman/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Richard+Feynman" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Richard+Feynman" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
