--- a/pages/18910.html
+++ b/pages/18910.html
@@ -309,10 +309,42 @@ margin-left: 0em;
 
 <div id="revision">
     <h1 id='explicit_mathematics'>Explicit mathematics</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#the_basic_theory_of_operations_and_numbers'>The basic theory of operations and numbers</a></li><li><a href='#elementary_comprehension'>Elementary comprehension</a></li><li><a href='#join_and_inductive_generation'>Join and inductive generation</a></li><li><a href='#universes_in_explicit_mathematics'>Universes in explicit mathematics</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p><strong>Explicit mathematics</strong> is a programme initiated by <a class='existingWikiWord' href='/nlab/show/Solomon+Feferman'>Solomon Feferman</a> which is related to <a class='existingWikiWord' href='/nlab/show/constructive+mathematics'>constructive mathematics</a>.</p>
+
+<p>It is also a range of foundational logical systems based on the <span class='newWikiWord'>logic of partial terms<a href='/nlab/new/logic+of+partial+terms'>?</a></span>. Starting from a first-order logic of partial terms axiomatizing <a class='existingWikiWord' href='/nlab/show/partial+combinatory+algebra'>combinatory algebra</a>, a second sort of <em>classes</em> is added. Sometimes, the alternative names <em>classifications</em> or <em>types</em> are used.</p>
+
+<p>The classes of explicit mathematics are not like the classes of <a class='existingWikiWord' href='/nlab/show/set+theory'>set theory</a>, but also not like types of <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>. They are like the former in that they represent certain collections of the underlying first-order model, but they are like the latter in that they have <em>names</em> that can be operated on to construct new ones.</p>
+
+<p>The systems come in flavors with either intuitionistic or <a class='existingWikiWord' href='/nlab/show/classical+logic'>classical logic</a>. On benefit is that they allow for smooth axiomatization of strong notions of <a class='existingWikiWord' href='/nlab/show/universe'>universes</a>, see below.</p>
+
+<p>The primary systems are called <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>T</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>T_0</annotation></semantics></math> (the classical variant) and <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>T</mi> <mn>0</mn> <mi>i</mi></msubsup></mrow><annotation encoding='application/x-tex'>T_0^i</annotation></semantics></math> (the intuitionistic variant).</p>
+
+<h2 id='the_basic_theory_of_operations_and_numbers'>The basic theory of operations and numbers</h2>
+
+<p>The first-order part of the systems treat an applicative universe in the sense of combinatory algebra. It includes constants <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>k</mi></mrow><annotation encoding='application/x-tex'>k</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi></mrow><annotation encoding='application/x-tex'>s</annotation></semantics></math> (combinators), <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>p</mi></mrow><annotation encoding='application/x-tex'>p</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>p</mi> <mn>0</mn></msub></mrow><annotation encoding='application/x-tex'>p_0</annotation></semantics></math>, and <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>p</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>p_1</annotation></semantics></math> (pairing and projection), <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>0</mn></mrow><annotation encoding='application/x-tex'>0</annotation></semantics></math>, <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>s</mi> <mi>N</mi></msub></mrow><annotation encoding='application/x-tex'>s_N</annotation></semantics></math>, and <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>p</mi> <mi>N</mi></msub></mrow><annotation encoding='application/x-tex'>p_N</annotation></semantics></math> (zero, successor, and predecessor), and <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>d</mi> <mi>N</mi></msub></mrow><annotation encoding='application/x-tex'>d_N</annotation></semantics></math> (definition by cases on the natural numbers), and possibly further applicative constants.</p>
+
+<p>There is one binary function symbol <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_12' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⋅</mo></mrow><annotation encoding='application/x-tex'>\cdot</annotation></semantics></math> for application, and one unary relation symbol <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_13' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>↓</mo></mrow><annotation encoding='application/x-tex'>\downarrow</annotation></semantics></math> (defined), as well as equality.</p>
+
+<p>[todo: write the axioms for the applicative constants]</p>
+
+<h2 id='elementary_comprehension'>Elementary comprehension</h2>
+
+<p>When we go from the purely applicative theory to the theories of classes and names, we add a second sort (for classes) as well as several new constants, a binary relation symbol <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_14' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∈</mo></mrow><annotation encoding='application/x-tex'>\in</annotation></semantics></math> (for membership) and a binary relation symbol for names <code class='maruku-mathml'>\mathfrak R</code>, where <code class='maruku-mathml'>\mathfrak R(s, U)</code> means that <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_15' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>s</mi></mrow><annotation encoding='application/x-tex'>\mathfrak R\mathfrak Rs</annotation></semantics></math> is a name for the class <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_16' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>U</mi></mrow><annotation encoding='application/x-tex'>U</annotation></semantics></math>.</p>
+
+<p>[todo: write the axioms of elementary comprehension]</p>
+
+<h2 id='join_and_inductive_generation'>Join and inductive generation</h2>
+
+<p>The <em>join</em> of classes correspond to the <math class='maruku-mathml' display='inline' id='mathml_d38a8c3792a7db80801c1a56b47629b70d7b2870_17' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Σ</mi></mrow><annotation encoding='application/x-tex'>\Sigma</annotation></semantics></math>-types of type theory, …</p>
+
+<p>[todo: the axioms for join and inductive generation.]</p>
+
+<h2 id='universes_in_explicit_mathematics'>Universes in explicit mathematics</h2>
+
+<p>[todo]</p>
 
 <h2 id='references'>References</h2>
 
@@ -322,20 +354,32 @@ margin-left: 0em;
 </li>
 
 <li>
+<p>Solomon Feferman, <a href='http://home.inf.unibe.ch/~ltg/em_bibliography/feferman13.pdf'>How a Little Bit goes a Long Way: Predicative Foundations of Analysis</a>, notes prepared 1977-1981 with a new introduction from 2013.</p>
+</li>
+
+<li>
 <p><a href='http://www.ltg.unibe.ch/research/Foundations%20of%20Explicit%20Mathematics'>Foundations of explicit mathematics</a></p>
+</li>
+
+<li>
+<p><a href='http://home.inf.unibe.ch/~ltg/em_bibliography/'>Bibliography of explicit mathematics</a></p>
+</li>
+
+<li>
+<p>Reinhard Kahle and Anton Setzer, <a href='http://www.cs.swan.ac.uk/~csetzer/articles/kahleSetzerExtendedPredicativeMahloPohlersFestschrift.pdf'>An extended predicative definition of the Mahlo universe</a>, In: Ways of Proof Theory, pp. 315–340. Ontos Mathematical Logic, vol. 2, 2010.</p>
 </li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Created on January  5, 2018 13:21:14 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (4.34.80.131)
+  Revised on January  5, 2018 17:23:11 
+  by <a class="existingWikiWord" href="/nlab/show/Ulrik+Buchholtz">Ulrik Buchholtz</a>
+  (2a02:908:df50:9be0:f8c3:5256:26a4:f0fd)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/explicit+mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/explicit+mathematics" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/explicit+mathematics/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/explicit+mathematics" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/explicit+mathematics" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
